"""de_vertexwahn build and test dependencies."""

module(
    name = "de_vertexwahn",
    version = "0.0.1",
)

bazel_dep(name = "apple_support", version = "1.11.1")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "boost.algorithm", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.core", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.predef", version = "1.83.0.bzl.1")
bazel_dep(name = "eigen", version = "3.4.0")
bazel_dep(name = "embree", version = "4.3.0")
bazel_dep(name = "gazelle", version = "0.34.0")
bazel_dep(name = "imath", version = "3.1.9", repo_name = "Imath")
bazel_dep(name = "libdeflate", version = "1.19")
bazel_dep(name = "libjpeg_turbo", version = "2.1.4")
bazel_dep(name = "libpng", version = "1.6.40")
bazel_dep(name = "libwebp", version = "1.3.2")
bazel_dep(name = "nasm", version = "2.14.02")
bazel_dep(name = "openexr", version = "3.2.1")
bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_go", version = "0.42.0")
bazel_dep(name = "rules_license", version = "0.0.7")
bazel_dep(name = "rules_oci", version = "1.4.0")
bazel_dep(name = "rules_pkg", version = "0.9.1")
bazel_dep(name = "yaml-cpp", version = "0.8.0") # https://github.com/bazelbuild/bazel-central-registry/pull/938
bazel_dep(name = "zlib", version = "1.3")

bazel_dep(name = "googletest", version = "1.14.0.bcr.1", dev_dependency = True)
