"""de_vertexwahn build and test dependencies."""

module(
    name = "de_vertexwahn",
    version = "0.0.1",
)

bazel_dep(name = "boost.algorithm", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.core", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.predef", version = "1.83.0.bzl.1")
bazel_dep(name = "eigen", version = "3.4.0")
bazel_dep(name = "fmt", version = "10.1.1")
bazel_dep(name = "glog", version = "0.6.0")
bazel_dep(name = "libjpeg_turbo", version = "2.1.4")
bazel_dep(name = "libpng", version = "1.6.40")
bazel_dep(name = "libwebp", version = "1.3.2")
bazel_dep(name = "openexr", version = "3.2.1")
bazel_dep(name = "platforms", version = "0.0.8")
