"""de_vertexwahn build and test dependencies."""

module(
    name = "de_vertexwahn",
    version = "0.0.1",
)

# Depend on apple_support first and then rules_cc so that the Xcode toolchain
# from apple_support wins over the generic Unix toolchain from rules_cc.
bazel_dep(name = "apple_support", version = "1.22.1")

bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "boost.algorithm", version = "1.89.0")
bazel_dep(name = "boost.asio", version = "1.89.0")
bazel_dep(name = "boost.core", version = "1.89.0")
bazel_dep(name = "boost.endian", version = "1.89.0")
bazel_dep(name = "boost.predef", version = "1.89.0")
bazel_dep(name = "boost.program_options", version = "1.89.0")
bazel_dep(name = "boost.uuid", version = "1.89.0")
bazel_dep(name = "cpuinfo", version = "0.0.0-20250925-877328f")
bazel_dep(name = "eigen", version = "5.0.0")
bazel_dep(name = "fmt", version = "12.0.0")
bazel_dep(name = "hypothesis", version = "0.0.0-20240425-3acfea6")
bazel_dep(name = "imath", version = "3.2.2")
bazel_dep(name = "libdeflate", version = "1.24")
bazel_dep(name = "libjpeg_turbo", version = "2.1.4")
bazel_dep(name = "libpng", version = "1.6.50.bcr.1")
bazel_dep(name = "libwebp", version = "1.6.0")
bazel_dep(name = "nasm", version = "2.14.02")
bazel_dep(name = "nlohmann_json", version = "3.12.0")
bazel_dep(name = "openexr", version = "3.4.2")
bazel_dep(name = "pcg", version = "0.98.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "pugixml", version = "1.15")
bazel_dep(name = "rules_cc", version = "0.2.11")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_python", version = "1.6.3")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "spdlog", version = "1.15.3")
bazel_dep(name = "xtensor", version = "0.27.1")
bazel_dep(name = "xtl", version = "0.8.0")
bazel_dep(name = "yaml-cpp", version = "0.8.0")
bazel_dep(name = "zlib", version = "1.3.1.bcr.7")

#bazel_dep(name = "aspect_rules_lint", version = "1.4.4", dev_dependency = True)
bazel_dep(name = "bazel_clang_tidy", dev_dependency = True)
bazel_dep(name = "catch2", version = "3.11.0", dev_dependency = True)
bazel_dep(name = "google_benchmark", version = "1.9.4", dev_dependency = True)
bazel_dep(name = "googletest", version = "1.17.0.bcr.1", dev_dependency = True)
